# odin_bots

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README-contribute.md  README-how-it-works.md  README-security.md  README.md  odin-bots.toml  pyproject.toml
.github/workflows/: cicd.yml
scripts/: update_tokens.py
skills/odin-bots/: CHANGELOG.md  SKILL.md
skills/odin-bots/scripts/: odin-bots-skill.py
src/odin_bots/: __init__.py  ai.py  bip322.py  candid.py  config.py  memory.py  persona.py  siwb.py  tokens.py  tokens.toml  transfers.py
src/odin_bots/cli/: __init__.py  balance.py  chat.py  concurrent.py  fund.py  rest_api.py  trade.py  wallet.py  withdraw.py
src/odin_bots/personas/iconfucius/: goodbye-prompt.md  greeting-prompt.md  persona.toml  system-prompt.md
src/odin_bots/skills/: __init__.py  definitions.py  executor.py
tests/: __init__.py  conftest.py  test_balance.py  test_bip322_helper.py  test_chat.py  test_cli.py  test_concurrent.py  test_config.py  test_config_extended.py  test_fund.py  test_get_public_key.py  test_memory.py  test_persona.py  test_sign_with_fee.py  test_skills_definitions.py  test_skills_executor.py  test_tokens.py  test_trade.py  test_transfers.py  test_wallet.py  test_withdraw.py
